[project]
name = "yann"
version = "0.0.40"
description = "yet another neural network library"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Michal Wolski", email = "michal@bite.ai" }
]
requires-python = ">=3.7"
dependencies = [
    "pyyaml>=6.0.1",
    "rich>=13.8.1",
    "torch",
    "torchvision",
]

[project.optional-dependencies]
cli = ["click>=6.7"]
pretrainedmodels = ["pretrainedmodels"]

[project.scripts]
yann = "yann.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # Specifies to look for packages in the current directory
include = ["yann*"]  # Include the main 'yann' package and any potential 'yann_extras' etc.
exclude = ["tests*"]  # Example: Exclude tests directory if you have one

[dependency-groups]
dev = [
    "add-trailing-comma>=2.4.0",
    "ipython>=7.34.0",
]


[tool.ruff]
line-length = 88
indent-width = 2


[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["COM812"] # Enforce trailing commas

